[package]
name = "driver_tester"
version = "0.1.0"
edition = "2021"
description = "A tool for testing drivers"
license = "MIT"
repository = "https://github.com/zerocom38/driver_tester.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "color"] }
rustyline = "12.0"
shlex = "1.2"

[target.'cfg(unix)'.build-dependencies]
nix = "0.27.1"
