[package]
name = "driver_tester"
version = "0.1.0"
edition = "2021"
description = "A tool for testing drivers"
license = "MIT"
repository = "https://github.com/zerocom38/driver_tester.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
clap-num = "1.1"
rustyline = "13.0"
shlex = "1.3"
nix = { version = "0.27", features = ["ioctl", "inotify"] }
libc = "0.2"
drm = "0.11"
sysfs_gpio = "0.6"

[target.'cfg(unix)'.build-dependencies]
